tdf#95194: We need to set the GF flags in UniscribeLayout::GetNextGlyphs()

The old SimpleWinLayout::GetNextGlyphs() did it.
PDFWriterImpl::drawVerticalGlyphs() expects GF_ROTL etc to be set when
necessary for vertical text when exporting to PDF.

Change-Id: I325d6e9f75a3bc51f24add33dd3bffe7b3c7bee0
(cherry picked from commit 7ac763db694a956cb1e4f82477a7f9fe993f1f1a)